UI Alignment issue fixed.

--- a/src/features/Container/Protocols/compare.scss
+++ b/src/features/Container/Protocols/compare.scss
@@ -121,7 +121,7 @@
   }
   .single-version {
     height: 50vh;
-    width: 90vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
