--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -139,7 +139,7 @@
 
   p {
     margin-bottom: 0;
-    margin-top: 5px;
+    // margin-top: 5px;
   }
 
   .thicker {
